log
Fri 25 Aug 2023 10:15:05 PM UTC: 
 tests:  0|6
total_score: 0/70
2eb1dbf
Fri 25 Aug 2023 10:20:43 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
0f3c6c7
Fri 25 Aug 2023 10:26:32 PM UTC: 
 list.c | 8 ++++++--
 1 file changed, 6 insertions(+), 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
bd2a0a4
Fri 25 Aug 2023 10:29:34 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
9763049
Fri 25 Aug 2023 10:29:43 PM UTC: 
 list.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  1|5
total_score: 10/70
029fca8
Fri 25 Aug 2023 10:30:09 PM UTC: 
 list.c | 2 --
 1 file changed, 2 deletions(-)
In file included from test.c:5:
list.c: In function ‘firstList’:
list.c:43:1: error: control reaches end of non-void function [-Werror=return-type]
   43 | }
      | ^
list.c: In function ‘nextList’:
list.c:49:1: error: control reaches end of non-void function [-Werror=return-type]
   49 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
1ec89cd
Fri 25 Aug 2023 10:33:26 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
2e0656f
Fri 25 Aug 2023 10:35:42 PM UTC: 
 list.c | 4 +++-
 1 file changed, 3 insertions(+), 1 deletion(-)
 tests:  1|5
total_score: 10/70
fcedbb6
Fri 25 Aug 2023 10:37:18 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
d5a98a5
Fri 25 Aug 2023 10:41:29 PM UTC: 
 list.c | 5 ++---
 1 file changed, 2 insertions(+), 3 deletions(-)
In file included from test.c:5:
list.c: In function ‘createList’:
list.c:33:11: error: ‘List’ {aka ‘struct List’} has no member named ‘first’
   33 |   newList -> first = NULL;
      |           ^~
list.c:34:10: error: ‘List’ {aka ‘struct List’} has no member named ‘last’
   34 |   newList->last = NULL;
      |          ^~
Compilation failed
825c856
Fri 25 Aug 2023 10:42:16 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
a343d85
Fri 25 Aug 2023 10:44:09 PM UTC: 
 list.c | 6 ++----
 1 file changed, 2 insertions(+), 4 deletions(-)
 tests:  2|5
total_score: 15/70
ef42ec7
Fri 25 Aug 2023 10:44:39 PM UTC: 
 list.c | 8 +++-----
 1 file changed, 3 insertions(+), 5 deletions(-)
 tests:  2|5
total_score: 15/70
977b913
Fri 25 Aug 2023 10:48:50 PM UTC: 
 list.c | 8 +++++---
 1 file changed, 5 insertions(+), 3 deletions(-)
 tests:  5|4
total_score: 25/70
f9d8f6a
Fri 25 Aug 2023 11:16:09 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  6|4
total_score: 25/70
ffbd571
Fri 25 Aug 2023 11:17:22 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  9|3
total_score: 35/70
c2d29da
Fri 25 Aug 2023 11:21:00 PM UTC: 
 list.c | 8 ++++++++
 1 file changed, 8 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:76:7: error: ‘List’ {aka ‘struct List’} has no member named ‘size’
   76 |   list->size++;
      |       ^~
Compilation failed
c3664a9
